# hypua2jamo

./: .coveragerc  .gitignore  .manylinux-install.sh  .manylinux.sh  .readthedocs.yaml  .travis.yml  CHANGES.rst  MANIFEST.in  Makefile  README  README.rst  appveyor.yml  benchmark.py  buildout.cfg  ccompiler-vc90.cmd  ccompiler-vs2019.cmd  ccompiler-winsdk10.cmd  ccompiler-winsdk71.cmd  codepoints_p2j.c  codepoints_p2j.h  codepoints_typedef.h  data2c.py  data2py.py  hypua2jamo_build.py  ktugfile.py  requirements.in  requirements.txt  setup.cfg  setup.py  tox-py27.cmd  tox-py34.cmd  tox.ini
.github/workflows/: tests.yml
data/: README  hypua2jamocomposed.txt  hypua2jamodecomposed.txt  jamocompose.map
docs/: Makefile  conf.py  hypua2jamo-cli.rst  hypua2jamo.rst  index.rst  make.bat
examples/: HunMinPreface.hypua.txt  HunMinPreface.txt
requirements/: dev.in  dev.txt  docs.in  docs.txt  lint.in  lint.txt  site.txt  test.in  test.txt
src/hypua2jamo/: __init__.py  _cython.pyx  _cython2.c  _cython3.c  cli.py  composed.pickle  composed.py  decoder.py  decomposed.pickle  decomposed.py  encoder.py  j2p_decoder.py  p2j_encoder.py  p2jc-table.h  p2jd-table.h
src/hypua2jamo-c/: CMakeLists.txt  Makefile  c2d-table.h  c2d.cpp  config.h.in  d2c-tree.inc  d2c.c  data2c.py  hypua2jamo.h  jc2p-tree.h  jc2p-tree.h.in  jc2p-tree.inc  jc2p.c  jc2p4.c  jd2p-tree.inc  jd2p.c  jx2p-translator-methods.inc  jx2p-translator.h  jx2p.cpp  jx2p.h  jx2p.inc  p2jc-table.h  p2jc-ucs2.cpp  p2jc-ucs4.cpp  p2jc.cpp  p2jc2-table.h  p2jc2.c  p2jc4-table.h  p2jc4.c  p2jd-table.h  p2jd-ucs2.cpp  p2jd-ucs4.cpp  p2jd.cpp  p2jd2-table.h  p2jd2.c  p2jd4-table.h  p2jd4.c  p2jx.hpp
tests/: test_conversion.py
